// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventsBlock
    block={
        Object {
            "fields": Object {
              "backgroudColor": "foo",
              "drip": false,
              "eventType": "foo",
              "events": Array [],
              "locationFilterButton": false,
              "text": "foo",
              "title": "foo",
            },
          }
    }
    events={
        Array [
            Object {
              "blockCardText": "foo",
              "datesAndTimes": Array [
                Object {
                  "Date": "foo",
                  "Time": "foo",
                  "uuid": "foo",
                },
              ],
              "eventType": "foo",
              "id": "foo",
              "image": "foo",
              "locationTitle": "foo",
              "title": "foo",
            },
          ]
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="px2 text-container-width center"
>
          <h2
                    className="block-headline mt4 mb3"
          >
                    foo
          </h2>
          <div
                    className="markdown-block"
                    dangerouslySetInnerHTML={
                              Object {
                                        "__html": "<p>foo</p>
                              ",
                                      }
                    }
          />
</div>,
        null,
        <div
          className="w100 flex flex-column items-center my3 px2"
>
          <EventCard
                    active={true}
                    event={
                              Object {
                                        "blockCardText": "foo",
                                        "datesAndTimes": Array [
                                          Object {
                                            "Date": "foo",
                                            "Time": "foo",
                                            "uuid": "foo",
                                          },
                                        ],
                                        "eventType": "foo",
                                        "id": "foo",
                                        "image": "foo",
                                        "locationTitle": "foo",
                                        "title": "foo",
                                      }
                    }
          />
</div>,
      ],
      "className": "flex flex-column items-center justify-center",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="block-headline mt4 mb3"
>
              foo
</h2>,
            <div
              className="markdown-block"
              dangerouslySetInnerHTML={
                            Object {
                                          "__html": "<p>foo</p>
                            ",
                                        }
              }
/>,
          ],
          "className": "px2 text-container-width center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "className": "block-headline mt4 mb3",
            },
            "ref": null,
            "rendered": "foo",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "markdown-block",
              "dangerouslySetInnerHTML": Object {
                "__html": "<p>foo</p>
",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <EventCard
              active={true}
              event={
                            Object {
                                          "blockCardText": "foo",
                                          "datesAndTimes": Array [
                                            Object {
                                              "Date": "foo",
                                              "Time": "foo",
                                              "uuid": "foo",
                                            },
                                          ],
                                          "eventType": "foo",
                                          "id": "foo",
                                          "image": "foo",
                                          "locationTitle": "foo",
                                          "title": "foo",
                                        }
              }
/>,
          ],
          "className": "w100 flex flex-column items-center my3 px2",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
<<<<<<< HEAD
            "key": "0",
=======
            "key": "foo",
>>>>>>> Add EventBlock test
            "nodeType": "function",
            "props": Object {
              "active": true,
              "event": Object {
                "blockCardText": "foo",
                "datesAndTimes": Array [
                  Object {
                    "Date": "foo",
                    "Time": "foo",
                    "uuid": "foo",
                  },
                ],
                "eventType": "foo",
                "id": "foo",
                "image": "foo",
                "locationTitle": "foo",
                "title": "foo",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="px2 text-container-width center"
>
            <h2
                        className="block-headline mt4 mb3"
            >
                        foo
            </h2>
            <div
                        className="markdown-block"
                        dangerouslySetInnerHTML={
                                    Object {
                                                "__html": "<p>foo</p>
                                    ",
                                              }
                        }
            />
</div>,
          null,
          <div
            className="w100 flex flex-column items-center my3 px2"
>
            <EventCard
                        active={true}
                        event={
                                    Object {
                                                "blockCardText": "foo",
                                                "datesAndTimes": Array [
                                                  Object {
                                                    "Date": "foo",
                                                    "Time": "foo",
                                                    "uuid": "foo",
                                                  },
                                                ],
                                                "eventType": "foo",
                                                "id": "foo",
                                                "image": "foo",
                                                "locationTitle": "foo",
                                                "title": "foo",
                                              }
                        }
            />
</div>,
        ],
        "className": "flex flex-column items-center justify-center",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="block-headline mt4 mb3"
>
                foo
</h2>,
              <div
                className="markdown-block"
                dangerouslySetInnerHTML={
                                Object {
                                                "__html": "<p>foo</p>
                                ",
                                              }
                }
/>,
            ],
            "className": "px2 text-container-width center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "block-headline mt4 mb3",
              },
              "ref": null,
              "rendered": "foo",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "markdown-block",
                "dangerouslySetInnerHTML": Object {
                  "__html": "<p>foo</p>
",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <EventCard
                active={true}
                event={
                                Object {
                                                "blockCardText": "foo",
                                                "datesAndTimes": Array [
                                                  Object {
                                                    "Date": "foo",
                                                    "Time": "foo",
                                                    "uuid": "foo",
                                                  },
                                                ],
                                                "eventType": "foo",
                                                "id": "foo",
                                                "image": "foo",
                                                "locationTitle": "foo",
                                                "title": "foo",
                                              }
                }
/>,
            ],
            "className": "w100 flex flex-column items-center my3 px2",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
<<<<<<< HEAD
              "key": "0",
=======
              "key": "foo",
>>>>>>> Add EventBlock test
              "nodeType": "function",
              "props": Object {
                "active": true,
                "event": Object {
                  "blockCardText": "foo",
                  "datesAndTimes": Array [
                    Object {
                      "Date": "foo",
                      "Time": "foo",
                      "uuid": "foo",
                    },
                  ],
                  "eventType": "foo",
                  "id": "foo",
                  "image": "foo",
                  "locationTitle": "foo",
                  "title": "foo",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventsBlock
    block={
        Object {
            "fields": Object {
              "backgroudColor": "white",
              "drip": false,
              "eventType": "",
              "events": Array [],
              "locationFilterButton": false,
              "text": "",
              "title": "",
            },
          }
    }
    events={
        Array [
            Object {
              "blockCardText": "",
              "datesAndTimes": Array [
                Object {
                  "Date": "",
                  "Time": "",
                  "uuid": "",
                },
              ],
              "eventType": "",
              "id": "",
              "image": "",
              "locationTitle": "",
              "title": "",
            },
          ]
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="px2 text-container-width center"
>
          <h2
                    className="block-headline mt4 mb3"
          />
          <div
                    className="markdown-block"
                    dangerouslySetInnerHTML={
                              Object {
                                        "__html": "",
                                      }
                    }
          />
</div>,
        null,
        <div
          className="w100 flex flex-column items-center my3 px2"
>
          <EventCard
                    active={true}
                    event={
                              Object {
                                        "blockCardText": "",
                                        "datesAndTimes": Array [
                                          Object {
                                            "Date": "",
                                            "Time": "",
                                            "uuid": "",
                                          },
                                        ],
                                        "eventType": "",
                                        "id": "",
                                        "image": "",
                                        "locationTitle": "",
                                        "title": "",
                                      }
                    }
          />
</div>,
      ],
      "className": "flex flex-column items-center justify-center",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="block-headline mt4 mb3"
/>,
            <div
              className="markdown-block"
              dangerouslySetInnerHTML={
                            Object {
                                          "__html": "",
                                        }
              }
/>,
          ],
          "className": "px2 text-container-width center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "block-headline mt4 mb3",
            },
            "ref": null,
            "rendered": "",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "markdown-block",
              "dangerouslySetInnerHTML": Object {
                "__html": "",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <EventCard
              active={true}
              event={
                            Object {
                                          "blockCardText": "",
                                          "datesAndTimes": Array [
                                            Object {
                                              "Date": "",
                                              "Time": "",
                                              "uuid": "",
                                            },
                                          ],
                                          "eventType": "",
                                          "id": "",
                                          "image": "",
                                          "locationTitle": "",
                                          "title": "",
                                        }
              }
/>,
          ],
          "className": "w100 flex flex-column items-center my3 px2",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
<<<<<<< HEAD
            "key": "0",
=======
            "key": undefined,
>>>>>>> Add EventBlock test
            "nodeType": "function",
            "props": Object {
              "active": true,
              "event": Object {
                "blockCardText": "",
                "datesAndTimes": Array [
                  Object {
                    "Date": "",
                    "Time": "",
                    "uuid": "",
                  },
                ],
                "eventType": "",
                "id": "",
                "image": "",
                "locationTitle": "",
                "title": "",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="px2 text-container-width center"
>
            <h2
                        className="block-headline mt4 mb3"
            />
            <div
                        className="markdown-block"
                        dangerouslySetInnerHTML={
                                    Object {
                                                "__html": "",
                                              }
                        }
            />
</div>,
          null,
          <div
            className="w100 flex flex-column items-center my3 px2"
>
            <EventCard
                        active={true}
                        event={
                                    Object {
                                                "blockCardText": "",
                                                "datesAndTimes": Array [
                                                  Object {
                                                    "Date": "",
                                                    "Time": "",
                                                    "uuid": "",
                                                  },
                                                ],
                                                "eventType": "",
                                                "id": "",
                                                "image": "",
                                                "locationTitle": "",
                                                "title": "",
                                              }
                        }
            />
</div>,
        ],
        "className": "flex flex-column items-center justify-center",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="block-headline mt4 mb3"
/>,
              <div
                className="markdown-block"
                dangerouslySetInnerHTML={
                                Object {
                                                "__html": "",
                                              }
                }
/>,
            ],
            "className": "px2 text-container-width center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "block-headline mt4 mb3",
              },
              "ref": null,
              "rendered": "",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "markdown-block",
                "dangerouslySetInnerHTML": Object {
                  "__html": "",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <EventCard
                active={true}
                event={
                                Object {
                                                "blockCardText": "",
                                                "datesAndTimes": Array [
                                                  Object {
                                                    "Date": "",
                                                    "Time": "",
                                                    "uuid": "",
                                                  },
                                                ],
                                                "eventType": "",
                                                "id": "",
                                                "image": "",
                                                "locationTitle": "",
                                                "title": "",
                                              }
                }
/>,
            ],
            "className": "w100 flex flex-column items-center my3 px2",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
<<<<<<< HEAD
              "key": "0",
=======
              "key": undefined,
>>>>>>> Add EventBlock test
              "nodeType": "function",
              "props": Object {
                "active": true,
                "event": Object {
                  "blockCardText": "",
                  "datesAndTimes": Array [
                    Object {
                      "Date": "",
                      "Time": "",
                      "uuid": "",
                    },
                  ],
                  "eventType": "",
                  "id": "",
                  "image": "",
                  "locationTitle": "",
                  "title": "",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
